--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,7 @@
 	path = ground_truth_layer
 	url = https://github.com/rakeshshrestha31/ground_truth_layer.git
 	branch = master
+[submodule "Stage"]
+	path = Stage
+	url = https://github.com/rakeshshrestha31/Stage.git
+	branch = master
