--- a/.gitmodules
+++ b/.gitmodules
@@ -22,3 +22,7 @@
 	path = libfloorplan
 	url = https://github.com/rakeshshrestha31/libfloorplan.git
 	branch = master
+[submodule "hector_navigation"]
+	path = hector_navigation
+	url = https://github.com/rakeshshrestha31/hector_navigation.git
+	branch = master
